--- a/mobx/package.json
+++ b/mobx/package.json
@@ -9,7 +9,12 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react-scripts": "1.0.7",
+    "webpack": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
