--- a/mbx/package.json
+++ b/mbx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MobXX",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,12 +9,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react-scripts": "1.0.7",
-    "webpack": "^3.0.0"
+    "custom-react-scripts": "0.0.23"
   },
   "scripts": {
     "start": "react-scripts start",
